Add pose age TRACE_COUNTERs for VR/XR gamepads

This helps provide an estimate how old the poses are when polled
by the gamepad API and when read from JavaScript.

BUG=878181

Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I623b876cff559709ff858d9df0ee1df33b736481
Reviewed-on: https://chromium-review.googlesource.com/1200569
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Reviewed-by: Bill Orr <billorr@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590159}
Former-commit-id: 59af5e55b9189cad106efc654195d3737f43690e